Fix margin of journal article details when displayed on mobile.

--- a/public/_static/page.css
+++ b/public/_static/page.css
@@ -160,7 +160,7 @@ header {
 }
 
 header .details {
-	padding: 0 4rem;
+	margin: 0 auto;
 }
 
 header h1 {
